--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -49,8 +49,10 @@ jobs:
       #   continue-on-error: true
 
       - run: reg query "HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Windows" /v FeatureSet
+        continue-on-error: true
 
       - run: reg query "Hardware\Description\System\CentralProcessor\0" /v FeatureSet
+        continue-on-error: true
 
 
   # test:
