--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -64,8 +64,8 @@ jobs:
         continue-on-error: true
 
       - run: |
-          mkdir build
-          cd build
+          mkdir .github/workflows/build
+          cd .github/workflows/build
           cmake ..
 
 
