--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,6 +42,9 @@ jobs:
       # Default shell is bash, so this should work.
       SHELLOPTS: 'xtrace'
     steps:
+      - name: Check out a copy of the git repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
       - run: wmic cpu get
         continue-on-error: true
 
