--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -70,7 +70,7 @@ jobs:
           ls -a
           mkdir build
           cd build
-          cmake --verbose ..
+          cmake --debug-output ..
 
 
 
