--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ if(check_result EQUAL 0)
     message(STATUS "✅ Feature 'AVX-512F' found!")
     # Add your compile definitions for AVX-512F
     add_compile_definitions(HAS_AVX512F)
-else()
+elseif(check_result EQUAL 11)
     message(STATUS "❌ Feature 'AVX-512F' not found.")
+else()
+    message(STATUS "wrong")
 endif()
