--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.31)
 project(check CXX)
 
+set(CMAKE_CXX_FLAGS "/arch:AVX512 /O2")
+
 # Add an executable for the CPU feature check
 add_executable(cpu_check check_avx512f.cc)
 
