--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,15 +26,15 @@ jobs:
   #   steps:
   #     - run: echo yes
 
-  print-mac:
-    runs-on: macos-13
-    steps:
-      - run: sysctl hw.optional
-      - run: sysctl machdep
-      - run: |
-          [[ $(sysctl hw.optional.avx512f) -eq 1 ]] && echo yes || echo no
-          [[ $(sysctl hw.optional.avx2_0) -eq 1 ]] && echo yes || echo no
-      - run: clang++ --version
+  # print-mac:
+  #   runs-on: macos-13
+  #   steps:
+  #     - run: sysctl hw.optional
+  #     - run: sysctl machdep
+  #     - run: |
+  #         [[ $(sysctl hw.optional.avx512f) -eq 1 ]] && echo yes || echo no
+  #         [[ $(sysctl hw.optional.avx2_0) -eq 1 ]] && echo yes || echo no
+  #     - run: clang++ --version
 
   print-win:
     runs-on: windows-2022
@@ -45,29 +45,28 @@ jobs:
       - name: Check out a copy of the git repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - run: wmic cpu get
-        continue-on-error: true
-
-      - run: systeminfo
-        continue-on-error: true
-
-      # - run: msinfo32
+      # - run: wmic cpu get
       #   continue-on-error: true
 
-      - run: reg query "HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Windows" /v FeatureSet
-        shell: cmd
-        continue-on-error: true
+      # - run: systeminfo
+      #   continue-on-error: true
 
-      - run: reg query "Hardware\Description\System\CentralProcessor\0" /v FeatureSet
-        shell: cmd
-        continue-on-error: true
+      # # - run: msinfo32
+      # #   continue-on-error: true
 
-      - run: reg query "HKLM\Hardware\Description\System\CentralProcessor\0" /v FeatureSet
-        shell: cmd
-        continue-on-error: true
+      # - run: reg query "HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control\Windows" /v FeatureSet
+      #   shell: cmd
+      #   continue-on-error: true
+
+      # - run: reg query "Hardware\Description\System\CentralProcessor\0" /v FeatureSet
+      #   shell: cmd
+      #   continue-on-error: true
+
+      # - run: reg query "HKLM\Hardware\Description\System\CentralProcessor\0" /v FeatureSet
+      #   shell: cmd
+      #   continue-on-error: true
 
       - run: |
-          ls -a
           mkdir build
           cd build
           cmake --debug-output ..
