--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -74,7 +74,7 @@ jobs:
           mkdir build
           cd build
           cmake --debug-output ..
-          cmake --build -v .
+          cmake --build . -v
 
 
   # test:
