--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.31)
 project(check CXX)
 
 # Add an executable for the CPU feature check
-add_executable(cpu_check check_avx512f.cc)
+add_executable(check_512 check_avx512f.cc)
+add_executable(check_2 check_avx2.cc)
 
 # Values get set, but doesn't seem to get passed to msvc compiler
 # set(CMAKE_CXX_FLAGS_INIT "${CMAKE_CXX_FLAGS_INIT} /arch:AVX512 /O2")
@@ -11,7 +12,9 @@ add_executable(cpu_check check_avx512f.cc)
 # This also doesn't seem to get passed to the actual compiler invocation
 # add_compile_options(/arch:AVX512 /O2)
 
-target_compile_options(cpu_check PRIVATE /arch:AVX512)
+# THIS WORKS
+target_compile_options(check_512 PRIVATE /arch:AVX512)
+target_compile_options(check_2 PRIVATE /arch:AVX2)
 
 
 # # Print the values of cmake variables.
@@ -26,20 +29,31 @@ target_compile_options(cpu_check PRIVATE /arch:AVX512)
 # endforeach()
 
 add_custom_command(
-    TARGET cpu_check POST_BUILD
+    TARGET check_512 POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E echo "Running the test program..."
-    COMMAND $<TARGET_FILE:cpu_check>
+    COMMAND $<TARGET_FILE:check_512>
     COMMAND ${CMAKE_COMMAND} -E echo "Test program finished."
     COMMENT "Executing test program"
 )
 
-get_target_property(compile_defs cpu_check COMPILE_DEFINITIONS)
-message(STATUS "cpu_check compile definitions: ${compile_defs}")
+get_target_property(compile_defs check_512 COMPILE_DEFINITIONS)
+message(STATUS "check_512 compile definitions: ${compile_defs}")
+
+add_custom_command(
+    TARGET check_2 POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E echo "Running the test program..."
+    COMMAND $<TARGET_FILE:check_2>
+    COMMAND ${CMAKE_COMMAND} -E echo "Test program finished."
+    COMMENT "Executing test program"
+)
+
+get_target_property(compile_defs check_2 COMPILE_DEFINITIONS)
+message(STATUS "check_2 compile definitions: ${compile_defs}")
 
 
 # # Run the compiled checker and check its return code
 # execute_process(
-#     COMMAND $<TARGET_FILE:cpu_check>
+#     COMMAND $<TARGET_FILE:check_512>
 #     RESULT_VARIABLE check_result
 # #    OUTPUT_QUIET
 # #    ERROR_QUIET
