--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,9 @@
 name: Test
 
 on:
+  push:
   merge_group:
   pull_request:
-  push:
   workflow_dispatch:
     inputs:
       trace:
@@ -20,10 +20,10 @@ jobs:
     env:
       # Default shell is bash, so this should work.
       SHELLOPTS: 'xtrace'
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-24.04, macos-13, windows-2025]
+    # strategy:
+    #   fail-fast: false
+    #   matrix:
+    #     os: [ubuntu-24.04, macos-13, windows-2025]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
