--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,9 +34,9 @@ jobs:
           python-version: '3.11'
           architecture: 'x64'
 
-      - run: |
-          pip install -r requirements.txt
-          pip install -r dev-requirements.txt
+      # - run: |
+      #     pip install -r requirements.txt
+      #     pip install -r dev-requirements.txt
 
       - run: pip install -v qsimcirq
 
