--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -28,6 +28,8 @@ jobs:
 
 
             two blank lines
+
+            <br>one blank line with a br before it
         run: |
           echo "${{env.message}}" >> "$GITHUB_STEP_SUMMARY"
           exit 1
