--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,36 +15,49 @@ defaults:
     shell: bash -x {0}
 
 jobs:
-  mac-pip:
-    runs-on: macos-13
+  test-debug:
+    runs-on: ubuntu-24.04
+    timeout-minutes: 5
     env:
-      # Default shell is bash, so this should work.
-      SHELLOPTS: 'xtrace'
-    # strategy:
-    #   fail-fast: false
-    #   matrix:
-    #     os: [ubuntu-24.04, macos-13, windows-2025]
+      SHELLOPTS: ${{inputs.debug && 'xtrace' || '' }}
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          fetch-depth: 1
+      - name: echo value
+        run: |
+          set -x
+          echo 'SHELLOPTS' = "$SHELLOPTS"
+          echo "env.SHELLOPTS = ${{env.SHELLOPTS}}"
+          echo "inputs.debug = ${{inputs.debug}}"
 
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
-        with:
-          python-version: '3.11'
-          architecture: 'x64'
+  # mac-pip:
+  #   runs-on: macos-13
+  #   env:
+  #     # Default shell is bash, so this should work.
+  #     SHELLOPTS: 'xtrace'
+  #   # strategy:
+  #   #   fail-fast: false
+  #   #   matrix:
+  #   #     os: [ubuntu-24.04, macos-13, windows-2025]
+  #   steps:
+  #     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+  #       with:
+  #         fetch-depth: 1
 
-      # - run: |
-      #     pip install -r requirements.txt
-      #     pip install -r dev-requirements.txt
+  #     - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
+  #       with:
+  #         python-version: '3.11'
+  #         architecture: 'x64'
 
-      - run: pip install -v qsimcirq
+  #     # - run: |
+  #     #     pip install -r requirements.txt
+  #     #     pip install -r dev-requirements.txt
 
-      - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
-        if: failure()
-        with:
-          name: notebook-outputs
-          path: out
+  #     - run: pip install -v qsimcirq
+
+  #     - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
+  #       if: failure()
+  #       with:
+  #         name: notebook-outputs
+  #         path: out
 
 
 
