--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ on:
   pull_request:
   workflow_dispatch:
     inputs:
-      trace:
+      debug:
         description: 'Turn on shell script debugging'
         type: boolean
         default: true
