--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,6 +34,42 @@ jobs:
           echo "${{inputs.debug == 'false'}}"
           echo "${{github.event.inputs.debug}}"
 
+  test-cond-1:
+    if: inputs.debug
+    runs-on: ubuntu-24.04
+    steps:
+      - name: echo value
+        run: |
+          echo 'SHELLOPTS' = "$SHELLOPTS"
+          echo "env.SHELLOPTS = ${{env.SHELLOPTS}}"
+          echo "inputs.debug = ${{inputs.debug}}"
+          echo "${{inputs.debug && 'xtrace' || 'the case for false' }}"
+          echo "${{inputs.debug == true}}"
+          echo "${{inputs.debug == 'true'}}"
+          echo "${{inputs.debug == false}}"
+          echo "${{inputs.debug == 'false'}}"
+          echo "${{github.event.inputs.debug}}"
+
+  test-cond-2:
+    if: ${{inputs.debug}}
+    runs-on: ubuntu-24.04
+    steps:
+      - name: echo value
+        run: |
+          echo 'SHELLOPTS' = "$SHELLOPTS"
+          echo "env.SHELLOPTS = ${{env.SHELLOPTS}}"
+          echo "inputs.debug = ${{inputs.debug}}"
+          echo "${{inputs.debug && 'xtrace' || 'the case for false' }}"
+          echo "${{inputs.debug == true}}"
+          echo "${{inputs.debug == 'true'}}"
+          echo "${{inputs.debug == false}}"
+          echo "${{inputs.debug == 'false'}}"
+          echo "${{github.event.inputs.debug}}"
+
+
+
+
+
   # mac-pip:
   #   runs-on: macos-13
   #   env:
