--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,12 +69,12 @@ jobs:
       # Add xtrace to SHELLOPTS for all Bash scripts when doing debug runs.
       SHELLOPTS: ${{inputs.debug && 'xtrace' || '' }}
     steps:
-      - run: echo "${{github.event_name == 'workflow_dispatch' && env.ref}}"
+      - run: echo "${{github.event_name == 'workflow_dispatch' && env.ref || ''}}"
 
       - name: Check out a copy of the git repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{github.event_name == 'workflow_dispatch' && env.ref}}
+          ref: ${{github.event_name == 'workflow_dispatch' && env.ref || ''}}
 
       - name: Get a list of files changed in the PR
         id: changes
