--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,6 +82,7 @@ jobs:
 
       - name: Check that files contain appropriate license headers
         run: |
+          set +x
           set +e
           problems=$(go run github.com/google/addlicense@v1.2.0 -check \
             ${{inputs.debug && '-v'}} "${{steps.changes.outputs.all_changed_files}}")
