--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,7 +85,7 @@ jobs:
           set +x
           set +e
           problems=$(go run github.com/google/addlicense@v1.2.0 -check \
-            ${{inputs.debug && '-v'}} "${{steps.changes.outputs.all_changed_files}}")
+            ${{inputs.debug && '-v'}} ${{steps.changes.outputs.all_changed_files}})
           if [[ -n "$problems" ]]; then
             echo "::error::Found incorrect license headers in these files:"
             for file in "${problems[@]}"; do
