--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,9 +55,6 @@ concurrency:
 # Declare default workflow permissions as read only.
 permissions: read-all
 
-env:
-  copyright_holder: "me and myself, LLC"
-
 jobs:
   check-license-headers:
     name: Check license headers
@@ -87,8 +84,7 @@ jobs:
         run: |
           set +e
           problems=$(go run github.com/google/addlicense@v1.2.0 -check \
-            ${{inputs.debug && '-v'}} -c "${{env.copyright_holder}}" \
-            ${{steps.changes.outputs.all_changed_files}})
+            ${{inputs.debug && '-v'}} ${{steps.changes.outputs.all_changed_files}})
           if [[ -n "$problems" ]]; then
             for file in "${problems[@]}"; do
               printf "::error:: ❌ %s\n" "$file"
